Add max, fix columns

--- a/_includes/staff_entries.html
+++ b/_includes/staff_entries.html
@@ -6,7 +6,8 @@
         <img class="staff__img" src="{{ staff.image }}" alt="{{ staff.name }}" />
         <address>
             <strong>{{ staff.name }}</strong>
-            <a href="mailto:{{ staff.email }}"> (email)</a>
+        
+           <p> <a href="mailto:{{ staff.email }}"> (email)</a></p>
         </address>
     </div>
     {% endfor %}
