--- a/_includes/staff_entries.html
+++ b/_includes/staff_entries.html
@@ -6,7 +6,12 @@
         <img class="staff__img" src="{{ staff.image }}" alt="{{ staff.name }}" />
         <address>
             <strong>{{ staff.name }}</strong>
-        
+            {% for line in staff.discussion_info %}
+                <p class="section__time"> {{ line }} </p>
+            {% endfor %}
+            {% for line in staff.lab_info %}
+            <p class="section__time"> {{ line }} </p>
+            {% endfor %}
            <p> <a href="mailto:{{ staff.email }}"> (email)</a></p>
         </address>
     </div>
