--- a/_sass/ds100.scss
+++ b/_sass/ds100.scss
@@ -175,12 +175,12 @@ ul {
   text-align: center;
   flex-wrap: wrap;
 
-  margin-top: 1.5rem;
+  margin-top: 1rem;
 }
 
     .staff__item {
-      flex-basis: 10rem;
-      margin-bottom: 4rem;
+      flex-basis: 16rem;
+      margin-bottom: 3rem;
 
       a {
         font-size: 18px;
@@ -192,6 +192,12 @@ ul {
       height: 10rem;
       width: 7.5rem;
       margin: 0 auto;
+    }
+
+    .section__time {
+      margin-top: 0;
+      margin-bottom: 0rem;
+      font-size: 14px;
     }
 
 @media (min-width: $tablet-up) {
